# monolish

./: -A  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile  Doxyfile.in  Makefile  Makefile.a64fx  Makefile.clang_gpu  Makefile.cpu  Makefile.fx  Makefile.gpu  Makefile.sx  Makefile.sxat  README.md  cmake_preset_generator.py  index.html  install_mpi.sh
.git-ci/: blas1.yml  common.yml  logger.yml  solver.yml  spmv.yml
0.14.0/: annotated.html  classes.html  dir_025d96959d25640be777f29a15be251a.html  dir_08a040b0d0df6e0a779b310b450badf4.html  dir_0966d06610f72609fd9aa4979c2b5a92.html  dir_0b251772e3153bf9148552a8025983e3.html  dir_0c305f51c1e3f62fed9a84cde9bf10c9.html  dir_1445dbc1383759a79be8ce1d5068112d.html  dir_14836bbb2bc7dc6191296fccd02eca85.html  dir_14bbdce743d58b7de5445b5e3cd4508b.html  dir_172ca91ba6c60b1e690eb5494265ab09.html  dir_1770218045d6656318e4a6e31ca8dd92.html  dir_1d5dde0f60d1388dd7beb92e1419b16b.html  dir_22c69263832c5005b73b14efc371b7ab.html  dir_23ef20cb2cad42f7b8a3b1ade7cb65d6.html  dir_2667028e0e9eaa5e7c364a39113481a3.html  dir_2a07f495077bbdee34d31912b6f3d238.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_338d62937c57f95551d6e53723add7e9.html  dir_35ff00657b2c65b51d45f1bb2584490d.html  dir_36b42d8a6cf88c8a9dafce45aaf7a031.html  dir_43c56d7369ab372fa949c5afab93038d.html  dir_47283483253429f4ff60aed2c3789b5a.html  dir_4e1ab6de08e94a2c4f8a44a7a8414dff.html  dir_50665c23f3ac8910394cbd604d4ff7f9.html  dir_52bed217005fa7d2f2705875b4a57ba9.html  dir_5de36e0beda8be537cb32a96a5f12217.html  dir_68222ea776c29d76058bba72f52b4b2a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_76bfb54b130652dbca3c6686e89e7f20.html  dir_7de94d46820062110f053b25c65ab140.html  dir_7ffa52d2c174e04d029d2ac1f591d4d8.html  dir_8b52e6c5b4cb3b2e2106c7837956c88c.html  dir_8f0e569dc08e2a21bb33b9b08f8e1fd2.html  dir_9139d7b0b9b0a5470b81f502387c8479.html  dir_b60060fca16efce0ba887124fbf82cf1.html  dir_bdf652b555f63b99eb5df86f487898f3.html  dir_c1b016fa79ca76e473830f18b27f5110.html  dir_c7606e7f47ba2444b3161e9aefacebf5.html  dir_cc1f0fdfad33174e8174a2bcbf9f3ec5.html  (+91 more)
0.14.1/: annotated.html  classes.html  dir_025d96959d25640be777f29a15be251a.html  dir_08a040b0d0df6e0a779b310b450badf4.html  dir_0966d06610f72609fd9aa4979c2b5a92.html  dir_0b251772e3153bf9148552a8025983e3.html  dir_0c305f51c1e3f62fed9a84cde9bf10c9.html  dir_1445dbc1383759a79be8ce1d5068112d.html  dir_14836bbb2bc7dc6191296fccd02eca85.html  dir_14bbdce743d58b7de5445b5e3cd4508b.html  dir_172ca91ba6c60b1e690eb5494265ab09.html  dir_1770218045d6656318e4a6e31ca8dd92.html  dir_1d5dde0f60d1388dd7beb92e1419b16b.html  dir_22c69263832c5005b73b14efc371b7ab.html  dir_23ef20cb2cad42f7b8a3b1ade7cb65d6.html  dir_2667028e0e9eaa5e7c364a39113481a3.html  dir_2a07f495077bbdee34d31912b6f3d238.html  dir_2fe3b209ba91c67403a5b318dad0feb6.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_338d62937c57f95551d6e53723add7e9.html  dir_35ff00657b2c65b51d45f1bb2584490d.html  dir_36b42d8a6cf88c8a9dafce45aaf7a031.html  dir_37761ffa7f98ca07257d14da9c51fbc3.html  dir_43c56d7369ab372fa949c5afab93038d.html  dir_47283483253429f4ff60aed2c3789b5a.html  dir_4e1ab6de08e94a2c4f8a44a7a8414dff.html  dir_50665c23f3ac8910394cbd604d4ff7f9.html  dir_52bed217005fa7d2f2705875b4a57ba9.html  dir_5de36e0beda8be537cb32a96a5f12217.html  dir_68222ea776c29d76058bba72f52b4b2a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6993b48177f4798e7c32b5b63ec2c631.html  dir_76bfb54b130652dbca3c6686e89e7f20.html  dir_7de94d46820062110f053b25c65ab140.html  dir_7ffa52d2c174e04d029d2ac1f591d4d8.html  dir_8b52e6c5b4cb3b2e2106c7837956c88c.html  dir_8f0e569dc08e2a21bb33b9b08f8e1fd2.html  dir_9139d7b0b9b0a5470b81f502387c8479.html  dir_a9b22774a02ad69a30b84bd405b7fb28.html  dir_b60060fca16efce0ba887124fbf82cf1.html  (+99 more)
0.14.2/: annotated.html  classes.html  dir_025d96959d25640be777f29a15be251a.html  dir_08a040b0d0df6e0a779b310b450badf4.html  dir_0966d06610f72609fd9aa4979c2b5a92.html  dir_0b251772e3153bf9148552a8025983e3.html  dir_0c305f51c1e3f62fed9a84cde9bf10c9.html  dir_1445dbc1383759a79be8ce1d5068112d.html  dir_14836bbb2bc7dc6191296fccd02eca85.html  dir_14bbdce743d58b7de5445b5e3cd4508b.html  dir_172ca91ba6c60b1e690eb5494265ab09.html  dir_1770218045d6656318e4a6e31ca8dd92.html  dir_1d5dde0f60d1388dd7beb92e1419b16b.html  dir_22c69263832c5005b73b14efc371b7ab.html  dir_23ef20cb2cad42f7b8a3b1ade7cb65d6.html  dir_2667028e0e9eaa5e7c364a39113481a3.html  dir_2a07f495077bbdee34d31912b6f3d238.html  dir_2fe3b209ba91c67403a5b318dad0feb6.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_338d62937c57f95551d6e53723add7e9.html  dir_35ff00657b2c65b51d45f1bb2584490d.html  dir_36b42d8a6cf88c8a9dafce45aaf7a031.html  dir_37761ffa7f98ca07257d14da9c51fbc3.html  dir_43c56d7369ab372fa949c5afab93038d.html  dir_47283483253429f4ff60aed2c3789b5a.html  dir_4e1ab6de08e94a2c4f8a44a7a8414dff.html  dir_50665c23f3ac8910394cbd604d4ff7f9.html  dir_52bed217005fa7d2f2705875b4a57ba9.html  dir_5de36e0beda8be537cb32a96a5f12217.html  dir_68222ea776c29d76058bba72f52b4b2a.html  (+116 more)
0.15.0/: annotated.html  (+103 more)
python/: Makefile  pyproject.toml
python/monolish_log_viewer/: __main__.py  aggregate.py  command_manager.py  create_log.py  debug.py  drop_information.py  grouping.py  html.py  read.py
python/monolish_log_viewer/__pycache__/: drop_information.py  grouping.py
python/monolish_log_viewer/libs/: aggregate.py  grouping.py
python/monolish_log_viewer/tests/utils/: test_read.py
python/monolish_log_viewer/utils/: command_manager.py  formats.py  html.py  read.py
python/tests/: test_main.py
python/tests/feature/: test_create_log.py  test_main.py
python/tests/libs/: test_aggregate.py  test_grouping.py
python/tests/test_data/: matmul.yml  no_error.yml  normal_data_order.yml  only_other.yml
python/tests/unit/: test_aggregate.py  test_grouping.py  test_html.py  test_read.py
python/tests/unit/libs/: test_aggregate.py  test_grouping.py
python/tests/unit/utils/: test_html.py  test_read.py
python/tests/utils/: test_html.py  test_read.py
(+9838 files in other folders)
